# x402

./: .gitignore
e2e/: README.md  test.ts
e2e/clients/httpx/: main.py  pyproject.toml  test.config.json
e2e/clients/mcp-python/: main.py  pyproject.toml  test.config.json
e2e/clients/requests/: main.py  pyproject.toml  test.config.json
e2e/facilitators/python/: README.md  main.py  pyproject.toml  test.config.json
e2e/servers/fastapi/: main.py  pyproject.toml  test.config.json
e2e/servers/flask/: main.py  pyproject.toml  test.config.json
e2e/servers/mcp-python/: main.py  pyproject.toml  test.config.json
e2e/src/: types.ts
e2e/src/cli/: args.ts
e2e/src/clients/: generic-client.ts
e2e/src/facilitators/: facilitator-manager.ts  generic-facilitator.ts
e2e/src/networks/: networks.ts
e2e/src/servers/: generic-server.ts
examples/python/clients/advanced/: .env-local  README.md  all_networks.py  pyproject.toml
examples/python/facilitator/: .env-local
examples/python/facilitator/advanced/: .env-local  README.md  all_networks.py  pyproject.toml
examples/python/servers/advanced/: .env-local  README.md  all_networks.py  pyproject.toml
python/x402/: README.md  pyproject.toml
python/x402/changelog.d/: tvm-python-sdk.feature.md
python/x402/mechanisms/tvm/: README.md  __init__.py  constants.py  notes.md  provider.py  settlement_cache.py  signer.py  signers.py  streaming.py  trace_utils.py  types.py  utils.py
python/x402/mechanisms/tvm/codecs/: __init__.py  common.py  highload_v3.py  jetton.py  w5.py
python/x402/mechanisms/tvm/exact/: __init__.py  client.py  codec.py  facilitator.py  register.py  server.py  settlement_batcher.py
python/x402/tests/integrations/: test_tvm.py
python/x402/tests/unit/mechanisms/tvm/: __init__.py  builders.py  fakes.py  helpers.py  test_client.py  test_client_server.py  test_codec.py  test_constants.py  test_facilitator.py  test_highload_v3.py  test_index.py  test_provider.py  test_server.py  test_settlement_batcher.py  test_settlement_cache.py  test_signers.py  test_streaming.py  test_trace_utils.py  test_types.py
