[project]
name = "x402-mcp-client-e2e"
version = "0.1.0"
description = "Python MCP client for x402 e2e tests"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "mcp>=1.9.0",
    "x402[evm,tvm,mcp]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../python/x402", editable = true }
