[project]
name = "x402-e2e-facilitator-python"
version = "0.1.0"
description = "Python facilitator for x402 e2e testing"
requires-python = ">=3.10"
dependencies = [
    "x402[fastapi,evm,svm,tvm,extensions]",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../python/x402", editable = true }
