[project]
name = "x402-advanced-client-example"
version = "0.1.0"
description = "Advanced x402 client examples demonstrating hooks, custom selectors, and builder patterns"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "x402[evm,svm,tvm,httpx]",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
